add MongoDB connection and update product management to use Mongoose

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 PORT=3000
+
+MONGO_DB_URL=mongodb+srv://chanuDevOps:qVQzhxCQ9CKK2Q51@orgshopcluster.hi9cmk9.mongodb.net/?retryWrites=true&w=majority&appName=OrgShopCluster
+
