--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@ PORT=3000
 
 MONGO_DB_URL=mongodb+srv://chanuDevOps:qVQzhxCQ9CKK2Q51@orgshopcluster.hi9cmk9.mongodb.net/?retryWrites=true&w=majority&appName=OrgShopCluster
 
+JWT_SECRET=OrgShopJWTToken
+
+REFRESH_TOKEN_SECRET=OrgShopRefreshToken
